service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nodeport
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - name: nginx
    port: 80
    targetPort: 80
    nodePort: 30080
